# opentelemetry-resource-detectors-cpp

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  sonar-project.properties  vcpkg-configuration.json  vcpkg.json
.github/: renovate.json
.github/actions/install-dependencies/: action.yml
.github/workflows/: ci-vcpkg.yml  ci.yml  clang-tidy.yml  codeql.yml  lint.yml  sonarcloud.yml  update-vcpkg-baseline.yml
ci/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
cmake/: opentelemetry_resource_detectors-config.cmake  pkg-config.pc.in  wwa_opentelemetry_resource_detectors-config.cmake
cross-compile/: Dockerfile  cross-compile-common.sh  cross-compile-linux-arm64.sh  cross-compile-linux-x86.sh  cross-compile-macos-arm64.sh  cross-compile-macos-x64.sh  cross-compile-mingw32.sh  cross-compile-mingw64.sh
cross-compile/toolchains/: arm64-linux-cross-toolchain.cmake  arm64-osx-cross-toolchain.cmake  x64-mingw-cross-toolchain.cmake  x64-osx-cross-toolchain.cmake  x86-linux-cross-toolchain.cmake  x86-mingw-cross-toolchain.cmake
cross-compile/triplets/: arm64-linux-cross.cmake  arm64-osx-cross.cmake  x64-mingw-cross.cmake  x64-osx-cross.cmake  x86-linux-cross.cmake  x86-mingw-cross.cmake
examples/: CMakeLists.txt  example1.cpp  example2.cpp
include/opentelemetry/resource/wwa/: container_resource_detector.h  export.h  os_resource_detector.h  process_resource_detector.h
include/opentelemetry_resource_detectors/: container_resource_detector.h  os_resource_detector.h  process_resource_detector.h
src/: container_resource_detector.cpp  container_utils.cpp  container_utils.h  os_resource_detector.cpp  os_utils.cpp  os_utils.h  process_resource_detector.cpp  process_utils.cpp  process_utils.h  string_utils.cpp  string_utils.h  tstring.h
test/: .clang-tidy  CMakeLists.txt
test/container_utils/: extract_container_id_v1.cpp  extract_container_id_v2.cpp
test/os_utils/: get_host_arch.cpp  get_os_type.cpp
test/process_utils/: parse_zero_delimited_stream.cpp
test/string_utils/: ends_with.cpp  nth_word.cpp  remove_prefix.cpp  split.cpp  starts_with.cpp
